fixed wrapping problem

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -28,13 +28,13 @@ button {
 
 .flex-container {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
 }
 
 .labels {
     position: relative;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     font-family: Helvetica, sans-serif
 }
 
